force-app/main/default/objects/Vendor_Contact_Role_Map__mdt/Vendor_Contact_Role_Map__mdt.object-meta.xml
<CustomObject>
    <label>Vendor Contact Role Map</label>
    <pluralLabel>Vendor Contact Role Maps</pluralLabel>
</CustomObject>