force-app/main/default/objects/Vendor_Contact_Role_Map__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party</fullName>
                <default>true</default>
                <label>3rd Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>