force-app/main/default/objects/Vendor_Contact_Role_Map__mdt/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispatch</fullName>
                <default>true</default>
                <label>Dispatch</label>
            </value>
            <value>
                <fullName>Dispatch(Other)</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Account Setup and Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>