force-app/main/default/objects/Vendor_Contact_Role_Map__mdt/fields/Level_Order__c.field-meta.xml
<CustomField>
    <fullName>Level_Order__c</fullName>
    <label>Level Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>