force-app/main/default/objects/Vendor_Contact_Role_Map__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>